fix: inputStream for testNG to be embedded in fat jar